# V3DEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_project.bat  project_clang_xcode.command  project_gcc.sh  project_msvc2013.bat  project_msvc2015.bat
data/fonts/: arial.fnt  arial_0.tga
data/models/: test.f3d  test_materials.f3d  test_materials.max  test_plane3.F3D  test_scene.F3D  test_scene.max
data/shaders/: basic.xml  billboard.xml  bitmap_font.xml  default.xml  default_instancing.xml  default_instancing_attr.xml  exploding_effect.xml  font.xml  freetype_font.xml  freetypefont.xml  fxaa.fsh  fxaa_fsh.glsl  light.xml  nfaa_fsh.glsl  partical_system.xml  sample.xml  screen2D.xml  screen2DFXAA.xml  screen2DLeft.xml  screen2DMSAA.xml  screen2DNFAA.xml  screen2DRight.xml  shading_models_fsh.glsl  simple.xml  simple2D.xml  simple_fins_extrusion.xml  simple_target.xml  simple_target_tessilation.xml  simpledef.xml  skybox.xml  target_effects.fsh  target_effects_fsh.glsl  target_transformfeedback.xml  test.frag  test.vert  texture.xml  texture_TBN_vsh.glsl  texture_basis_vsh.glsl  texture_debug.xml  texture_normalmap.xml  (+4 more)
libs/DevIL/: CMakeLists.txt
libs/DevIL/src-IL/: CMakeLists.txt
libs/MaxExporterF3D/: ClassDesc.h  DllEntry.cpp  ExportSettings.cpp  ExportSettings.h  ExporterF3D.cpp  ExporterF3D.def  ExporterF3D.h  ExporterF3D.rc  Logger.cpp  Logger.h  MaxExporterF3D.sln  MaxExporterF3D.vcxproj  MaxExporterF3D.vcxproj.filters  ModelMetadata.cpp  ModelMetadata.h  SceneData.cpp  SceneData.h  common.h  resource.h  veroverrides.h
libs/ResIL/: CMakeLists.txt
libs/exporterF3D/: DllEntry.cpp  ExporterF3D.cpp  ExporterF3D.sln  IGameExporter.vcxproj  IGameExporter.vcxproj.filters  XMLUtility.cpp
libs/freetype2/: CMakeLists.txt
libs/glew/: CMakeLists.txt
libs/glew/doc/: glew.html
libs/glew/src/: glewinfo.c
libs/shaderc/: install.bat
libs/spirv/: install.bat
libs/tinyxml2/: CMakeLists.txt  xmltest.cpp
source/: BaseApplication.cpp  BaseApplication.h  Config.h  Engine.cpp  Engine.h  Fedoria3D.h  FedoriaConfig.h  FedoriaEngine.cpp  FedoriaEngine.h  Object.cpp  Object.h  Singleton.h  Valera3D.h  Vertex.cpp  Vertex.h  common.h
source/context/: DebugVK.cpp  DebugVK.h  DeviceContext.cpp  DeviceContext.h  DeviceContextD3D.cpp  DeviceContextD3D.h  DeviceContextGL.cpp  DeviceContextGL.h  DeviceContextVK.cpp  DeviceContextVK.h  DriverContext.cpp  DriverContext.h  DriverContextD3D.cpp  DriverContextD3D.h  DriverContextGL.cpp  DriverContextGL.h  GraphicsCaps.cpp  GraphicsCaps.h  SwapChainVK.cpp  SwapChainVK.h
source/core/: Dimension2D.h  Dimension2D.inl  Dimension3D.h  Dimension3D.inl  Math.h  Matrix2D.h  Matrix2D.inl  Matrix3D.h  Matrix3D.inl  Matrix4D.h  Matrix4D.inl  Point2D.h  Point2D.inl  Rect.h  Rect.inl  Vector2D.h  Vector2D.inl  Vector3D.h  Vector3D.inl  Vector4D.h  Vector4D.inl
source/decoders/: ModelF3DDecoder.cpp  ModelF3DDecoder.h  ResourceDecoder.cpp  ResourceDecoder.h  ShaderSourceDecoder.cpp  ShaderSourceDecoder.h  ShaderSpirVDecoder.cpp  ShaderSpirVDecoder.h  TextureResILDecoder.cpp  TextureResILDecoder.h
source/event/: EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  EventReceiver.h  InputEventGamepad.cpp  InputEventGamepad.h  InputEventHandler.cpp  InputEventHandler.h  InputEventKeyboard.cpp  InputEventKeyboard.h  InputEventMouse.cpp  InputEventMouse.h  InputEvents.cpp  InputEvents.h  KeyCodes.h
source/platform/: AppDelegate.h  AppDelegate.mm  Device.cpp  Device.h  Platform.cpp  Platform.h  PlatformLinux.cpp  PlatformLinux.h  Window.cpp  Window.h  WindowLinux.cpp  WindowLinux.h  WindowMacOSX.h  WindowMacOSX.mm  WindowWin32.cpp  WindowWin32.h  WindowWinApi.cpp  WindowWinApi.h  WindowsDelegate.h  WindowsDelegate.mm
source/renderer/: BitmapFontData.cpp  BitmapFontData.h  Buffer.cpp  Buffer.h  ConstantBuffer.cpp  ConstantBuffer.h  DataTypes.cpp  DataTypes.h  DebugDraw.cpp  DebugDraw.h  DebugGeometry.cpp  DebugGeometry.h  DebugLight.cpp  DebugLight.h  FontData.cpp  FontData.h  FreeTypeData.cpp  FreeTypeData.h  Geometry.cpp  Geometry.h  GeometryTarget.cpp  GeometryTarget.h  GeometryTypes.cpp  GeometryTypes.h  ImageFormats.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderAdvanced.cpp  RenderAdvanced.h  RenderBuffer.cpp  RenderBuffer.h  RenderJob.cpp  RenderJob.h  RenderLOD.cpp  RenderLOD.h  RenderList.cpp  RenderList.h  RenderPass.cpp  (+40 more)
source/resources/: BitmapFontData.cpp  BitmapFontData.h  FontData.cpp  FontData.h  Image.cpp  Image.h  ModelData.cpp  ModelData.h  ModelF3DDecoder.cpp  ModelF3DDecoder.h  ResourceDecoder.cpp  ResourceDecoder.h  Shader.cpp  Shader.h  ShaderData.cpp  ShaderData.h  ShaderResource.cpp  ShaderResource.h  ShaderSouceData.cpp  ShaderSouceData.h  TextureResILDecoder.cpp  TextureResILDecoder.h  VectorFontData.cpp  VectorFontData.h
source/scene/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  CubeShape.cpp  CubeShape.h  CylinderShape.cpp  CylinderShape.h  DiskShape.cpp  DiskShape.h  FPSCamera.cpp  FPSCamera.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FreeTypeFont.cpp  FreeTypeFont.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Node.cpp  Node.h  ParticleSystem.cpp  ParticleSystem.h  PlaneShape.cpp  PlaneShape.h  RectangleShape.cpp  RectangleShape.h  RenderTargetManager.cpp  RenderTargetManager.h  RenderTechniqueManager.cpp  RenderTechniqueManager.h  ResourceDecoder.cpp  ResourceDecoder.h  (+24 more)
source/stream/: FileStream.cpp  FileStream.h  IStream.h  MemoryStream.cpp  MemoryStream.h  Resource.cpp  Resource.h  ResourceLoader.h  ResourceLoader.inl  StreamManager.cpp  StreamManager.h
source/utils/: Cloneable.h  IntrusivePtr.h  Logger.cpp  Logger.h  MemoryPool.cpp  MemoryPool.h  RefCounted.cpp  RefCounted.h  Semaphore.cpp  Semaphore.h  Singleton.h  SpirVCompiler.cpp  SpirVCompiler.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
tests/TestFont/: BaseApplication.h  CMakeLists.txt  MyApplication.cpp  MyApplication.h
tests/Test_CreateContext/: CMakeLists.txt  CreateWindow.cpp  MyApplication.cpp  MyApplication.h
tools/: GLSL_430_notepad++.xml
(+167 files in other folders)
